added category page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ about: 'about.html'
                 </a>
             {% endif %}
         <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">Subscribe</a>
+        
+        <a class="subscribe-button" id="categories" href="{{ site.baseurl }}categories.html"> <i class="fa fa-list" aria-hidden="true"></i> Categories</a>
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
