fixed styling and image 404 page

--- a/404.html
+++ b/404.html
@@ -15,8 +15,8 @@
     <link rel="shortcut icon" href="https://demo.ghost.io/favicon.ico">
     <meta http-equiv="cleartype" content="on">
 
-    <link rel="stylesheet" type="text/css" href="assets/css/404.css">
-    <link rel="stylesheet" href="assets/css/ghost.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/404.css">
+    <link rel="stylesheet" href="/assets/css/ghost.css">
   <style type="text/css">
 :root #content > #center > .dose > .dosesingle,
 :root #content > #right > .dose > .dosesingle
@@ -30,7 +30,7 @@ img[src="/view.gif?page=/the-purpose-of-education/"]
               <div class="gh-view">
                 <section class="error-content error-404 js-error-container">
                   <section class="error-details">
-                    <img class="error-ghost" src="assets/images/404-ghost2x.png">
+                    <img class="error-ghost" src="/assets/images/404-ghost2x.png">
                     <section class="error-message">
                       <h1 class="error-code">404</h1>
                       <h2 class="error-description">Page not found</h2>
