--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ cover: false
 about: 'about.html'
 ---
 <link rel="stylesheet" href="/assets/css/font-awesome.css">
-<title> {{ site.name }} - {{ site.description }} </title>
+<title> {{ site.name }} - {{ site.description }} </tffitle>
 
 <header class="main-header">
     <nav class="main-nav overlay clearfix">
