removed etension from resume page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ about: 'about.html'
             <a class="tit" href="{{ site.baseurl}}"><h1 class="page-title">{{ site.name }}</h1></a>
             <h2 class="page-description">
                 {% if site.description %} {{ site.description }}. {% endif %}
-                {% if page.about %} <a class="hey" href='{{ site.baseurl }}resume.html'> My Resume </a> {% endif %}
+                {% if page.about %} <a class="hey" href='{{ site.baseurl }}resume'> My Resume </a> {% endif %}
                 <br>
                 <br>
                 <h2 class="page-description">Drown In My Mind</h2>
