added quotes to front page. generated at random mainly from my favorite books

--- a/index copy.html
+++ b/index copy.html
@@ -35,9 +35,7 @@ about: 'about.html'
                 {% if page.about %} <a class="hey" href='{{ site.baseurl }}resume'> My Resume </a> {% endif %}
                 <br>
                 <br>
-<!--                <h2 class="page-description">Drown In My Mind</h2>-->
-                <blockquote> <em> <p class="page-description-smaller" data-quotes></p> </em> </blockquote>
-
+                <h2 class="page-description">Drown In My Mind</h2>
             </h2>
         </div>
     </div>
