fixed double slash in uri

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ about: 'about.html'
             <a href="https://dribbble.com/robert903"> <i class="hey fa fa-dribbble" aria-hidden="true"></i></a>
 <!--END              Social Icons And Links To Social Accounts-->
 
-            <a class="tit" href="{{ site.baseurl}}"><h1 class="page-title">{{ site.name }}</h1></a>
+            <a class="tit" href="/"><h1 class="page-title">{{ site.name }}</h1></a>
             <h2 class="page-description">
                 {% if site.description %} {{ site.description }}. {% endif %}
                 {% if page.about %} <a class="hey" href='{{ site.baseurl }}resume'> My Resume </a> {% endif %}
