--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@ img[src="/view.gif?page=/the-purpose-of-education/"]
                     <section class="error-message">
                       <h1 class="error-code">404</h1>
                       <h2 class="error-description">Page not found</h2>
-                      <a class="error-link" href="http://robertrichards.me/">Go to the front page →</a>
+                      <a class="error-link" href="/">Go to the front page →</a>
                     </section>
                   </section>
                 </section>
