added euler problem 1 project

--- a/projects/euler/index.html
+++ b/projects/euler/index.html
@@ -4,6 +4,7 @@
            <script src="../../projects/euler/js/euler1.js"></script>
            <link rel="stylesheet" href="../../projects/euler/css/style.css"> 
            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+           <title>Project Euler</title>
     </head>
     <body>
         <center>
