added page for matrix algebra

--- a/matrix/index.html
+++ b/matrix/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html> 
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+       <title>MATRIX ALGEBRA - c/o Robert Richards</title>
+        <link rel="stylesheet" href="/matrix/style.css">
     </head>
     
     <div class="desc">Just to help supplement reading and lectures for Matrix Algebra (Linear Algebra) <br> & to Share. If Anything is Missing. let me know.. (hello@robertrichards.me)
@@ -9,9 +10,9 @@
    <div class="books">
        <h1>Text Books</h1>
        <ul>
-           <li><a href="#">Linear Algebra with Applications by Steven J. Leon </a></li>
-           <li><a href="#">Applied Linear Algebra and Matrix Analysis by Thomas S. Shores</a></li>
-           <li><a href="#">Linear Algebra Demystified by David McMahon</a> (best one IMO)</li>
+           <li><a href="/matrix/stephen.pdf">Linear Algebra with Applications by Steven J. Leon </a></li>
+           <li><a href="/matrix/applied.pdf">Applied Linear Algebra and Matrix Analysis by Thomas S. Shores</a></li>
+           <li><a href="/matrix/linear.pdf">Linear Algebra Demystified by David McMahon</a> (best one IMO)</li>
        </ul>
    </div>
     
