removed animation on quotes and made random every refresh

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ about: 'about.html'
                 <br>
                 <br>
 <!--                <h2 class="page-description">Drown In My Mind</h2>-->
-                <blockquote> <em> <p class="page-description-smaller" data-quotes></p> </em> </blockquote>
+                <blockquote> <em> <p class="page-description-smaller" id="quote" ></p> </em> </blockquote>
 
             </h2>
         </div>
