--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ about: 'about.html'
             {% endif %}
         <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">Subscribe</a>
         
-        <a class="subscribe-button" id="categories" href="{{ site.baseurl }}categories.html"> <i class="fa fa-list" aria-hidden="true"></i> Categories</a>
+        <a class="subscribe-button" id="categories" href="{{ site.baseurl }}categories"> <i class="fa fa-list" aria-hidden="true"></i> Categories</a>
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
